<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2021 Miku UI

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="miku_settings_title">Miku no Secret Stuff</string>
    <string name="miku_settings_summary">The Secret I have always dreamed of</string>
    <string name="device_part_title">Device Settings</string>

    <!-- Media artwork -->
    <string name="keyguard_media_art_title">Show media artwork</string>
    <string name="keyguard_media_art_summary">Miku UI will set Album as ur lockscreen wallerpaper while u are listening music!</string>
    <string name="keyguard_media_art_enable_blur_title">Blurrrr~ media artwork</string>
    <string name="keyguard_media_art_blur_radius_title">Blurrrr~ amount for media artwork</string>

    <!-- Media notification -->
    <string name="artwork_media_title">🎼 Miku Media notification</string>
    <string name="artwork_media_background_title">Enable Miku Media notification</string>
    <string name="artwork_media_background_summary">Miku UI will make ur Media notification looks cool!</string>
    <string name="artwork_media_background_enable_blur_title">Blurrrr~ media media artwork background</string>
    <string name="artwork_media_background_blur_radius_title">Blurrrr~ amount for media artwork</string>
    <string name="artwork_media_background_alpha_title">Transparency of background</string>

     <!-- Monet Engine -->
     <string name="monet_engine_custom_color_title">Choose color which u want as ur main color</string>
     <string name="monet_engine_custom_color_summary">Well...I wanna pick it myself rather than pick from wallpaper.</string>
     <string name="monet_engine_color_override_title">Custom color</string>
     <string name="monet_engine_white_luminance_user_title">How white could it be?</string>
     <string name="monet_engine_accurate_shades_title">Use accurate shades</string>
     <string name="monet_engine_chroma_factor_title">Lost miku no mind!</string>
     <string name="monet_engine_linear_lightness_title">Use linear lightness</string>

    <!-- Quick Settings brightness slider -->
    <string name="qs_brightness_slider_title">Show brightness slider</string>
    <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
    <string name="qs_brightness_position_bottom_title">Show brightness slider on bottom</string>
    <string name="qs_brightness_position_bottom_summary">As u can see...make brightness slider show on bottom quick settings</string>

    <!-- Quick Settings brightness icon -->
    <string name="brightness_icon_title">Adaptive brightness button</string>
    <string name="brightness_icon_summary">Show adaptive brightness button at the end of slider~</string>

    <!-- Quick QS Panel brightness slider -->
    <string name="quick_qs_brightness_slider_title">Show brightness slider in Quick QS Panel</string>
    <string name="quick_qs_brightness_slider_summary">You dont even need to pull it down! OAO</string>

    <!-- Brightness control -->
    <string name="status_bar_toggle_brightness">Brightness control by touch head</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by stroking Miku\' head.</string>

    <!-- Statusbar net monitor -->
    <string name="traffic_title">🌐 Traffic Indicators</string>
    <string name="network_traffic">🌐 Network traffic</string>
    <string name="network_traffic_state_title">Network traffic display</string>
    <string name="network_traffic_location">Where should we show the Traffic Indicator?</string>
    <string name="traffic_disabled">Damedesu!</string>
    <string name="traffic_statusbar">Statusbar</string>
    <string name="traffic_expanded_statusbar">Expanded header</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="network_traffic_arrow">Show arrows</string>
    <string name="network_traffic_arrow_summary">That\'s not ArrowOS, but hey, where is TH779?</string>
    <string name="network_traffic_type">How Miku UI show it?</string>
    <string name="show_network_traffic_combined">Twins</string>
    <string name="show_network_traffic_dynamic">Only on necessary</string>
    <string name="show_network_traffic_up">Upload is enough</string>
    <string name="show_network_traffic_down">Download is enough</string>
    <string name="show_network_traffic_all">I want both</string>
    <string name="nettraf_font_size">Font size when there\'s only single net</string>
    <string name="combined_status_bar_signal_icons">Combined signal icons</string>
    <string name="combined_status_bar_signal_icons_summary">Enable combined signal icons in status bar.\nRequires a SystemUI restart</string>

    <!-- Themes Settings -->
    <!-- [CHAR_LIMIT=NONE] Developer Settings: Title of the settings category for theme overlays. -->
    <string name="theme_customization_category">🍀 Miku no Icon Factory</string>
    <!-- [CHAR_LIMIT=NONE] Developer Settings: Title of the setting which enables overlays to customize headline and body fonts. -->
    <string name="theme_customization_font_title">Fonts</string>
    <string name="theme_customization_font_summary">Set system font style as you like</string>
    <!-- [CHAR_LIMIT=NONE] Developer Settings: Title of the setting which enables overlays to customize the adaptive icon shape (e.g. launcher and quick settings icons). -->
    <string name="theme_customization_icon_shape_title">Icon shape</string>
    <string name="theme_customization_icon_shape_summary">Set Apps Icon shape style that make it looks weird(what?</string>
    <!-- [CHAR_LIMIT=NONE] Developer Settings: Title of the setting which enables overlays to customize the system wide icon pack. -->
    <string name="theme_customization_icon_pack_title">Icon pack</string>
    <string name="theme_customization_icon_pack_summary">Great~ Set custom icon for StatusBar</string>
    <!-- [CHAR_LIMIT=NONE] Developer Settings: Label for the option that turns off customizations for a given category.-->
    <string name="theme_customization_device_default">Device default</string>

     <!-- UI settings -->
     <string name="monet_title">🎨 Monet Theme Engine</string>
     <string name="monet_summary">Customize Monet theme engine</string>

</resources>
