<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2021 Miku UI

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/miku_settings_title" >

        <com.miku.settings.preferences.SystemSettingSwitchPreference
            android:key="status_bar_brightness_control"
            android:title="@string/status_bar_toggle_brightness"
            android:summary="@string/status_bar_toggle_brightness_summary"
            android:defaultValue="false" />

        <com.miku.settings.preferences.SecureSettingSwitchPreference
            android:key="qs_show_brightness"
            android:title="@string/qs_brightness_slider_title"
            android:summary="@string/qs_brightness_slider_summary"
            android:defaultValue="true"/>

        <com.miku.settings.preferences.SecureSettingSwitchPreference
            android:key="sysui_qqs_brightness_slider"
            android:title="@string/quick_qs_brightness_slider_title"
            android:summary="@string/quick_qs_brightness_slider_summary"
            android:dependency="qs_show_brightness"
            android:defaultValue="false"/>

        <com.miku.settings.preferences.SecureSettingSwitchPreference
            android:key="qs_show_auto_brightness_button"
            android:title="@string/brightness_icon_title"
            android:summary="@string/brightness_icon_summary"
            android:defaultValue="true"
            android:dependency="qs_show_brightness"/>

        <com.miku.settings.preferences.SecureSettingSwitchPreference
            android:key="qs_brightness_position_bottom"
            android:title="@string/qs_brightness_position_bottom_title"
            android:summary="@string/qs_brightness_position_bottom_summary"
            android:defaultValue="false"
            android:dependency="qs_show_brightness" />

</PreferenceScreen>
